# moveit_arm_contol616

two_arm_config01/two_arm_config01/: CMakeLists.txt  package.xml
two_arm_config01/two_arm_config01/config/: fake_controllers.yaml  gazebo_two_arm.urdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  stomp_planning.yaml  two_arm.srdf
two_arm_config01/two_arm_config01/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
two_arm_config01/two_arm_config01/script/: my_move.py  my_move.pyZone.Identifier
